RESOLVED FIXED246412
[Live Range Selection] Some tests fail due to DeleteSelectionCommand not canonicalizing ending selection
https://bugs.webkit.org/show_bug.cgi?id=246412
Summary [Live Range Selection] Some tests fail due to DeleteSelectionCommand not cano...
Ryosuke Niwa
Reported 2022-10-12 10:59:07 PDT
Various deletion tests fail due to DeleteSelectionCommand no longer canonicalizing the ending selection when enabling live range selection.
Attachments
Ryosuke Niwa
Comment 1 2022-10-12 11:05:41 PDT
EWS
Comment 2 2022-10-12 23:41:23 PDT
Committed 255472@main (64b46e51042f): <https://commits.webkit.org/255472@main> Reviewed commits have been landed. Closing PR #5294 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-12 23:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.