[Live Range Selection] Some tests fail due to DeleteSelectionCommand not canonicalizing ending selection https://bugs.webkit.org/show_bug.cgi?id=246412

Reviewed by Wenson Hsieh and Darin Adler.

Explicitly canonicalize the ending selection in DeleteSelectionCommand.
Added copies of various tests that newly pass with this change with live range selection enabled.

* LayoutTests/editing/deleting/delete-br-in-last-table-cell-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/delete-br-in-last-table-cell-live-range.html: Added.
* LayoutTests/editing/deleting/delete-line-break-before-underlined-content-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/delete-line-break-before-underlined-content-live-range.html: Added.
* LayoutTests/editing/deleting/delete-line-break-between-paragraphs-with-same-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/delete-line-break-between-paragraphs-with-same-style-live-range.html: Added.
* LayoutTests/editing/deleting/delete-table-cell-contents-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/delete-table-cell-contents-live-range.html: Added.
* LayoutTests/editing/deleting/deleting-line-break-preserves-underline-color-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/deleting-line-break-preserves-underline-color-live-range.html: Added.
* LayoutTests/editing/deleting/merge-div-from-span-with-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-div-from-span-with-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-div-with-inline-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-div-with-inline-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-h6-with-style-2-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-h6-with-style-2-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-h6-with-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-h6-with-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-2-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-2-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-3-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-3-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-p-with-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-span-with-multiple-text-decoration-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-span-with-multiple-text-decoration-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-span-with-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-from-span-with-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-into-h1-with-dir-2-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-into-h1-with-dir-2-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-into-h1-with-style-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-into-h1-with-style-live-range.html: Added.
* LayoutTests/editing/deleting/merge-paragraph-with-style-from-rule-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/merge-paragraph-with-style-from-rule-live-range.html: Added.
* LayoutTests/editing/deleting/select-and-delete-last-char-in-table-live-range-expected.txt: Added.
* LayoutTests/editing/deleting/select-and-delete-last-char-in-table-live-range.html: Added.
* LayoutTests/editing/unsupported-content/table-delete-001-live-range-expected.txt: Added.
* LayoutTests/editing/unsupported-content/table-delete-001-live-range.html: Added.
* Source/WebCore/editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::doApply):

Canonical link: https://commits.webkit.org/255472@main